fix: overflow animation. 🎥

--- a/src/app/page/top/component/skill/skill.component.scss
+++ b/src/app/page/top/component/skill/skill.component.scss
@@ -2,67 +2,68 @@
 @import "src/app/common/style/variable";
 
 .skill {
-  margin: 2em 0.5em 0.5em 0.5em;
+  margin: 2rem 0.5rem 0.5rem 0.5rem;
 
   &__detail {
     background-color: $white;
     border-radius: $radius;
-    margin: 0.5em 0 0 0;
-    padding: 1.6em;
+    margin: 0.5rem 0 0 0;
+    padding: 1.6rem;
 
     &__language {
+      height: 15rem;
+      margin: 0.5rem 0 0 0.5rem;
 
       &__list {
-        height: 110px;
-        margin: 0.5em 0 0 0.5em;
+        display: inline-block;
+        margin: 0 0 0 1rem;
+        padding: 1rem 0 0 0;
+        position: relative;
+        transition-duration: .4s;
+        transform-style: preserve-3d;
 
-        &__item {
-          display: inline-block;
+        &__icon {
           position: absolute;
-          height: 100%;
-          transition-duration: .4s;
-          transform-style: preserve-3d;
-          margin: 0 0 0 1rem;
+          background-size: cover;
+          background-position: 50%;
+          backface-visibility: hidden;
+          border: solid 0.2rem $black;
+          height: 101px;
+          width: 101px;
 
-          &__icon {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 101px;
-            height: 101px;
+          &--hover {
             background-size: cover;
             background-position: 50%;
             backface-visibility: hidden;
+            border: solid 0.2rem $black;
+            height: 101px;
+            width: 101px;
+            transform: rotateY(180deg);
 
-            &--hover {
-              top: 0;
-              left: 0;
-              height: 101px;
+            p {
+              font-size: 2rem;
+              font-weight: bold;
+              line-height: 101px;
+              text-align: center;
               width: 101px;
-              background-size: cover;
-              background-position: 50%;
-              backface-visibility: hidden;
-              transform: rotateX(180deg);
             }
-
           }
 
-          &:hover {
+        }
 
-            background-color: red;
-            transform: rotateX(-180deg);
-          }
+        &:hover {
+          transform: rotateY(-180deg);
         }
       }
     }
 
     &__framework {
       &__frontend__list {
-        margin: 0.5em 0 0 0.5em;
+        margin: 0.5rem 0 0 0.5rem;
 
-        &__item {
+        &__itrem {
           display: inline;
-          margin: 0 0 0 1em;
+          margin: 0 0 0 1rem;
 
           &__icon {
             &:hover {
@@ -85,11 +86,11 @@
       }
 
       &__backend__list {
-        margin: 0.5em 0 0 0.5em;
+        margin: 0.5rem 0 0 0.5rem;
 
-        &__item {
+        &__itrem {
           display: inline;
-          margin: 0 0 0 1em;
+          margin: 0 0 0 1rem;
 
           &__icon:hover {
             transform: scale(2.0, 2.0);
